# tixhq

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.claude/hooks/: session-start.sh
cad/: README.md  dimensions.yaml  schema.json
docs/hardware/: bom.md
docs/operator-manual/: getting-started.md
firmware/common/: README.md  cobs.c  cobs.h  crc16.c  crc16.h  frame.c  frame.h
firmware/composter-mcu/: CMakeLists.txt  sdkconfig.defaults
firmware/composter-mcu/main/: CMakeLists.txt  main.c
firmware/safety-mcu/: CMakeLists.txt  sdkconfig.defaults
firmware/safety-mcu/main/: CMakeLists.txt  main.c
firmware/sensor-mcu/: CMakeLists.txt  sdkconfig.defaults
firmware/sensor-mcu/main/: main.c
infra/firewall/: nftables-grove.conf
infra/nats/: nats-server.conf
infra/systemd/: grove-alerting.service  grove-bus.service  grove-composter.service  grove-control.service  grove-mixer.service  grove-planner.service  grove-recipe.service  grove-safety.service  grove-scheduler.service  grove-sensor-ingest.service  grove-timeseries.service  grove-ui.service  grove-vision.service  grove.target
infra/udev/: 99-grove.rules
recipes/: basil_genovese.yaml  lettuce_buttercrunch.yaml  microgreens_mix.yaml
schemas/: grove.command.assign_recipe.schema.json  grove.command.dose.schema.json  grove.command.light.schema.json  grove.command.valve.schema.json  grove.composter.command.schema.json  grove.composter.state.schema.json  grove.event.alert.schema.json  grove.event.safety.trip.schema.json  grove.manifold.sensor.schema.json  grove.planner.setpoint.schema.json  grove.vision.observation.schema.json  grove.zone.sensor.moisture.schema.json
scripts/: dev_stub_backend.py  render_screenshot.mjs  validate_schemas.py  verify.sh
services/ai-planner/: pyproject.toml
services/ai-planner/ai_planner/: __main__.py  planner.py
services/ai-vision/: pyproject.toml
services/ai-vision/ai_vision/: __main__.py  inference.py
services/alerting/: pyproject.toml
services/alerting/alerting/: __main__.py
services/composter-controller/: Cargo.toml
services/composter-controller/src/: main.rs
services/control-loop/: Cargo.toml
services/control-loop/src/: lib.rs  main.rs
services/data-export/: pyproject.toml
services/data-export/data_export/: __main__.py
services/nutrient-mixer/: Cargo.toml
services/nutrient-mixer/src/: main.rs  mixer.rs
services/recipe-engine/: pyproject.toml
services/recipe-engine/recipe_engine/: __main__.py  engine.py
services/safety-watcher/: Cargo.toml
services/safety-watcher/src/: main.rs
services/scheduler/: pyproject.toml
services/scheduler/scheduler/: __main__.py
services/sensor-ingest/: pyproject.toml
services/sensor-ingest/sensor_ingest/: frame.py  main.py
services/update-manager/: pyproject.toml
services/update-manager/update_manager/: __main__.py
src/: errors.test.ts  errors.ts  server.ts
src/adapters/: SeoAdapter.ts  index.test.ts  index.ts
src/adapters/mock/: MockSeoAdapter.test.ts  MockSeoAdapter.ts
src/config/: env.test.ts  env.ts
src/domain/: client.ts  seo.ts
src/http/: app.test.ts  app.ts  errorHandler.test.ts  errorHandler.ts
src/http/routes/: clients.ts  health.ts  reports.ts
src/repositories/: ClientRepository.ts  index.ts
src/repositories/inMemory/: InMemoryClientRepository.test.ts  InMemoryClientRepository.ts
tests/: requirements.txt
tests/integration/: dry_run.py  safety_injection.py
tests/sim/: simulated_zone.py
tests/unit/: test_cad_dimensions.py  test_frame.py  test_recipe_engine.py
ui/backend/: pyproject.toml
ui/backend/backend/: main.py
ui/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
ui/frontend/src/lib/api/: stream.js
ui/frontend/src/lib/cad/: bindings.json  buildAppliance.js  buildArch.js  buildPlants.js  dimensions.js  liveBindings.js
ui/frontend/src/routes/: +page.svelte
ui/frontend/src/routes/3d/: +page.svelte
ui/frontend/src/routes/3d/arch/: +page.svelte
