[workspace]
resolver = "2"
members = [
    "services/control-loop",
    "services/nutrient-mixer",
    "services/composter-controller",
    "services/safety-watcher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
