[project]
name = "ai-planner"
version = "0.1.0"
description = "Converts sensor history + vision + recipe phase into dose commands"
requires-python = ">=3.10"
dependencies = [
    "nats-py>=2.6.0",
    "lightgbm>=4.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_planner*"]
