[project]
name = "alerting"
version = "0.1.0"
description = "Local-only alerting: buzzer, LCD, LAN companion via mDNS"
requires-python = ">=3.10"
dependencies = ["nats-py>=2.6.0", "zeroconf>=0.131"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["alerting*"]
