[package]
name = "composter-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "composter-controller"
path = "src/main.rs"
