[project]
name = "data-export"
version = "0.1.0"
description = "User-triggered telemetry export to USB drive"
requires-python = ">=3.10"
dependencies = ["pyarrow>=15.0", "httpx>=0.27", "click>=8.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_export*"]
