[project]
name = "recipe-engine"
version = "0.1.0"
description = "Loads crop YAML recipes, advances phases, publishes setpoints"
requires-python = ">=3.10"
dependencies = [
    "nats-py>=2.6.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["recipe_engine*"]
