[package]
name = "safety-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
futures-util = "0.3"
sd-notify = "0.4"

[[bin]]
name = "safety-watcher"
path = "src/main.rs"
