[project]
name = "scheduler"
version = "0.1.0"
description = "Photoperiod + pump duty cycle scheduler"
requires-python = ">=3.10"
dependencies = ["nats-py>=2.6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scheduler*"]
