[project]
name = "update-manager"
version = "0.1.0"
description = "Verifies and applies signed offline update bundles"
requires-python = ">=3.10"
dependencies = ["minisign-verify>=0.2", "click>=8.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["update_manager*"]
