[project]
name = "grove-ui-backend"
version = "0.1.0"
description = "FastAPI backend for the LAN-only GroveOS UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "nats-py>=2.6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
